//file:noinspection GroovyUnusedCatchParameter
import java.nio.file.Files
import java.nio.file.Paths

// Build script configuration block
buildscript {
    // Configure repositories for build script dependencies
    repositories {
        mavenCentral()
        gradlePluginPortal()

        maven {
            url = "https://oss.sonatype.org/content/repositories/snapshots/"
            name = "sonatype"
        }

        maven {
            url = "https://maven.atlassian.com/3rdparty/"
        }

        google()
    }

    // Build script dependencies
    dependencies {
        classpath group: 'commons-io', name: 'commons-io', version: '2.18.0'
        classpath "com.google.code.gson:gson:2.13.1"

        // Shadow plugin for creating fat JARs
        classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
    }
}

//*****************//
//     Plugins     //
//*****************//
apply plugin: 'java'

group projectGroup // https://maven.apache.org/guides/mini/guide-naming-conventions.html

// Java configuration 
java {
    withSourcesJar()
    withJavadocJar()

    // Set Java version compatibility
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

// This project depends on the server project evaluation
evaluationDependsOn(":server")

// Custom configuration for shadow dependencies
configurations {
    shadow {
        transitive = false
        canBeResolved = true
    }
}

// Project dependencies
dependencies {
    // Internal project dependencies
    api(project(":server"))

    // CoreLibs dependencies
    api("dev.ultreon.corelibs:collections-v0:$coreLibsVersion")
    api("dev.ultreon.corelibs:commons-v0:$coreLibsVersion")
    api("dev.ultreon.corelibs:crash-v0:$coreLibsVersion")
    api("dev.ultreon.corelibs:datetime-v0:$coreLibsVersion")
    api("dev.ultreon.corelibs:events-v1:$coreLibsVersion")
    api("dev.ultreon.corelibs:functions-v0:$coreLibsVersion")
    api("dev.ultreon.corelibs:registries-v0:$coreLibsVersion")
    api("dev.ultreon.corelibs:resources-v0:$coreLibsVersion")
    api("dev.ultreon.corelibs:text-v0:$coreLibsVersion")
    api("dev.ultreon.corelibs:translations-v1:$coreLibsVersion")
    api("dev.ultreon:ubo:$uboVersion")

    // Discord integration
    shadow(compileOnly("com.jagrosh:DiscordIPC:$discordIpcVersion"))

    // Graphics & Game Engine
    api("com.badlogicgames.gdx:gdx:$gdxVersion")
    api("com.badlogicgames.gdx:gdx-box2d:$gdxVersion")
    api("com.badlogicgames.gdx:gdx-ai:$aiVersion")
    api("com.badlogicgames.gdx:gdx-freetype:$gdxVersion")
    api("com.badlogicgames.gdx-video:gdx-video:$gdxVideoVersion")
    api("com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion")
    api("com.badlogicgames.ashley:ashley:$ashleyVersion")
    api("com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion")

    // Graphics Extensions
    api("com.github.tommyettinger:textratypist:$textraTypistVersion")
    api("com.kotcrab.vis:vis-ui:$visuiVersion")
    api("com.crashinvaders.vfx:gdx-vfx-core:$vfxVersion")
    api("com.crashinvaders.vfx:gdx-vfx-effects:$vfxVersion")
    api("com.github.mgsx-dev.gdx-gltf:gltf:$gltfVersion")
    api("space.earlygrey:shapedrawer:$shapeDrawerVersion")
    api("com.github.crykn.guacamole:gdx:$guacamoleVersion")
    api("com.github.crykn.guacamole:gdx:$guacamoleVersion")

    // Apache Commons
    api("org.apache.commons:commons-lang3:$commonsLangVersion")
    api("org.apache.commons:commons-collections4:$commonsCollectionsVersion")

    // Compression Libraries
    api("org.tukaani:xz:$tukaaniXzVersion")
    api("com.jcraft:jzlib:$jzlibVersion")

    // Utilities
    api("it.unimi.dsi:fastutil:$fastutilVersion", { exclude group: "it.unimi.dsi", module: "fastutil-core" })
    api("com.raylabz:opensimplex:$raylabzOpenSimplexVersion")
    api("org.jetbrains:annotations:$jetbrainsAnnotationsVersion")
    api("org.bidib.org.oxbow:swingbits:$swingbitsVersion")
    api("org.json:json:$jsonVersion")
    api("com.github.oshi:oshi-core:$oshiVersion")
    api("io.github.libsdl4j:libsdl4j:$libsdl4jVersion")
}

// Configure resource processing to include LICENSE file and exclude certain file types
processResources {
    // Copy LICENSE file from root project directory into META-INF folder of the build
    from(file("$rootProject.projectDir/LICENSE")) { into "META-INF/" }

    // Exclude files with specified extensions from being processed
    exclude "*.pdn",    // Paint.NET files
            "*.xcf",    // GIMP files
            "*.ps",     // Photoshop files 
            "*.bbmodel" // BlockBench model files

    // Pass version property to resource processing
    inputs.property "version", version

    // Handle duplicate resources by including them rather than failing
    duplicatesStrategy DuplicatesStrategy.INCLUDE
}

// JAR configuration
jar {
    manifest {
        // Define manifest attributes for the JAR file
        attributes(
                'Implementation-Title': 'Quantum Voxel',        // Name of the implementation
                'Implementation-Vendor': 'Ultreon Studios',     // Vendor/creator of the implementation
                project_version: project.version,               // Version from project properties
                'Main-Class': 'dev.ultreon.quantum.DesktopLauncher'  // Main class to run
        )
    }

    // Include compiled Java classes
    from compileJava.outputs

    // Include dependencies from shadow configuration
    // If dependency is a directory, include directly, otherwise unzip it
    from configurations.shadow.files.collect { it.isDirectory() ? it : zipTree(it) }

    // Include processed resources
    from processResources.outputs

    // Enable ZIP64 format for large JARs
    zip64 true

    // Strategy for handling duplicate files - include them rather than fail
    duplicatesStrategy DuplicatesStrategy.INCLUDE
}

// Create run directory for the application
tasks.register('prepareRun', {
    Files.createDirectories(Paths.get(rootProject.projectDir.getAbsolutePath(), "run"))
})

// Configure duplicate handling for resource processing
tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy DuplicatesStrategy.INCLUDE
}

// Configure duplicate handling for JAR creation
tasks.withType(Jar).configureEach {
    duplicatesStrategy DuplicatesStrategy.INCLUDE
}

// Task to copy runtime dependencies
tasks.register('copyDependencies', Copy) {
    from(configurations.runtimeClasspath)
    into("$projectDir/build/jars")
}

// Task to copy the built JAR
tasks.register('copyJar', Copy) {
    from(tasks.jar)
    into("$projectDir/build/jars")
}

// Test configuration
test {
    useJUnitPlatform()
}

// Java compilation settings
compileJava {
    options.encoding = "UTF-8"
}

// Make sourcesJar task depend on asset list generation
sourcesJar.dependsOn(":generateAssetList")
